@@ -70,6 +70,7 @@ Misc:
  - Qt: Rename "Resample video" option to "Bilinear filtering"
  - GBA Video: Optimize when BLD* registers are written frequently
  - Core: Cores can now have multiple sets of callbacks
+ - Util: Add hostname resolving function
 
 0.5.2: (2016-12-31)
 Bugfixes:
